--- a/apipython/Dockerfile
+++ b/apipython/Dockerfile
@@ -4,8 +4,8 @@ WORKDIR /app
 
 COPY . .
 
-RUN pip install flask sqlalchemy redis requests flask-sqlalchemy mysql-connector-python
+RUN pip install flask sqlalchemy redis requests flask-sqlalchemy mysql-connector-python gunicorn
 
 EXPOSE 8000
 
-CMD ["python", "app.py"]
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "app:app"]
